# Coretex

./: .gitignore  Cargo.toml  README.md  config.toml
.github/: about.md
examples/: basic_demo.rs
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs
src/config/: file.rs  memory.rs  mod.rs
src/consistency/: memory.rs  mod.rs
src/distribution/: mod.rs
src/membership/: memory.rs  mod.rs
src/messaging/: memory.rs  mod.rs
src/storage/: memory.rs  mod.rs
src/utils/: mod.rs
tests/: integration_tests.rs
