[package]
name = "coretex"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "分布式存储系统，类 Dynamo 设计"
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.4"
bytes = "1.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
rocksdb = { version = "0.20", optional = true }
sled = { version = "0.34", optional = true }
clap = { version = "4.3", features = ["derive"] }
toml = "0.7"
consistent_hash_ring = "0.8"
